# studio

./: .firebaserc-dev  .firebaserc-staging  .gitignore  CNAME  firebase.json  index.html  makefile  package-lock.json  package.json  pyproject.toml  readme.md  wrangler.jsonc
.github/workflows/: deploy-dev.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
api/: auth.py  main.py
app/: .gitignore  404.html  dashboard.html  index.html  login.html
app/js/: auth.js  firebase-config-dev.js  firebase-config-production.js  firebase-config-staging.js  firebase-config.js  guard.js
backend/: firebase_init.py  workspace.py
dash/: firebase.json  register.html
docs/: index.html
frontend/: backend.js  dashboard.html  login.html
home/: .firebaserc  app.js
